  * restore ability to have multiple-word commands to be separated with dashes,
    e.g. an alias for LISTINSTALLED is LIST-INSTALLED
  * UNOFFICIAL: simply open the search results page with a web browser instead
    of scanning it and displaying suitable lines for "/etc/apt/sources.list";
    that feature was broken (and nobody complained)
  * remove the (Suggests) dependency on wget; Python stdlib is capable enough
  * INSTALL: when installing using the url method, do keep the downloaded file;
    it will be found in "~/.wajig/$HOSTNAME/"

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 08 Apr 2012 22:22:48 +0200

wajig (2.4.1) unstable; urgency=low

  * 2.4 made an assumption that a user that isn't in 'sudo' group
    is not a sudoer. That's not the case (and it's a bad assumption).

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 27 Mar 2012 16:07:31 +0200

wajig (2.4) unstable; urgency=low

  * README, TODO, NEWS: if doc path (/usr/share/doc/<package name>) for
    a given package isn't found, check if such a package even exists.
  * INSTALL, INSTALLSUGGESTED: make --recommends and --norecommends options
    conflict.
  * INSTALL: one can now specify a mixture of installables:
    * deb files
    * url files
    * normal packages
    Previously, only one of these types could be installed at a time
  * make bash completer also complete lower-case COMMANDS;
    patch by "Reuben Thomas" <rrt@sc3d.org>
  * Reinstate --simulate and --teaching options:
    - the --simulate option implies that the epilogs of the --help option
      are now redundant so they are now removed. All they did was state what
      commands would be ran.
    - the --teaching option is renamed to --teach (for sake of consistency)
    - Closes: #665729
  * LOCALUPGRADE remove:
    - [ole] wajig LOCALUPGRADE
    - [new] wajig UPGRADE --local 
  * LOCALDISTUPGRADE remove:
    - [ole] wajig LOCALDISTUPGRADE
    - [new] wajig DISTUPGRADE --local