@@ -121,17 +121,6 @@ def do_describe_new(verbose=False):
         print("No new packages")
 
 
-def ping_host(hostname):
-    """Check if network host is reachable."""
-    # Check if we can talk to the HOST
-    command = "fping {} 2>/dev/null >/dev/null".format(hostname)
-    if perform.execute(command):
-        print("Could not contact the Debian server at " + hostname)
-        print("Perhaps it is down or you are not connected to the network.")
-        return False
-    return True
-
-
 def show_package_versions():
     packages = upgradable(get_names_only=False)
     if packages:
